--- a/src/Pages/PresentationPage/Presentation.css
+++ b/src/Pages/PresentationPage/Presentation.css
@@ -12,7 +12,7 @@
 .infoTop {
   display: flex;
   gap: 5px;
-  justify-content: center; /* Centers horizontally */
+  justify-content: center;
   align-items: center;
   border: 1px solid grey;
   padding: 0.3rem 0.5rem;
